--- a/CarND-LaneLines-P1-master/project1.ipynb
+++ b/CarND-LaneLines-P1-master/project1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -11,7 +11,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This image is: <class 'numpy.ndarray'> with dimensions: (540, 960, 3)\n"
+      "This image is: <class 'numpy.ndarray'> with dimensions: (540, 960, 3)\n",
+      "[MoviePy] >>>> Building video test_videos_output/solidWhiteRight.mp4\n",
+      "[MoviePy] Writing video test_videos_output/solidWhiteRight.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████▋| 221/222 [00:14<00:00, 25.84it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: test_videos_output/solidWhiteRight.mp4 \n",
+      "\n",
+      "Wall time: 15.4 s\n",
+      "[MoviePy] >>>> Building video test_videos_output/solidYellowLeft.mp4\n",
+      "[MoviePy] Writing video test_videos_output/solidYellowLeft.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████▉| 681/682 [00:30<00:00, 22.16it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: test_videos_output/solidYellowLeft.mp4 \n",
+      "\n",
+      "Wall time: 31.9 s\n"
      ]
     }
    ],
@@ -99,7 +137,7 @@
     "    If you want to make the lines semi-transparent, think about combining\n",
     "    this function with the weighted_img() function below\n",
     "    \"\"\"\n",
-    "# In case of error, don't draw the line(s)\n",
+    "    # In case of error, don't draw the line(s)\n",
     "    if lines is None:\n",
     "        return\n",
     "    if len(lines) == 0:\n",
@@ -252,54 +290,55 @@
     "    lines_edges = weighted_img(line_img, image)\n",
     "    return lines_edges\n",
     "\n",
-    "#image \n",
-    "pic = process_image(image)\n",
-    "output = \"test_images_output/solidWhiteCurve.jpg\"\n",
-    "plt.imsave(output, pic)\n",
+    "if __name__ == '__main__': \n",
+    "    #save image \n",
+    "    pic = process_image(image)\n",
+    "    output = \"test_images_output/solidWhiteCurve.jpg\"\n",
+    "    plt.imsave(output, pic)\n",
     "\n",
     "\n",
     "\n",
-    "#white_output = 'test_videos_output/solidWhiteRight.mp4'\n",
-    "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
-    "## To do so add .subclip(start_second,end_second) to the end of the line below\n",
-    "## Where start_second and end_second are integer values representing the start and end of the subclip\n",
-    "## You may also uncomment the following line for a subclip of the first 5 seconds\n",
-    "##clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\").subclip(0,5)\n",
-    "#clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\")\n",
-    "#white_clip = clip1.fl_image(process_image) #NOTE: this function expects color images!!\n",
-    "#%time white_clip.write_videofile(white_output, audio=False)\n",
+    "    white_output = 'test_videos_output/solidWhiteRight.mp4'\n",
+    "    ## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
+    "    ## To do so add .subclip(start_second,end_second) to the end of the line below\n",
+    "    ## Where start_second and end_second are integer values representing the start and end of the subclip\n",
+    "    ## You may also uncomment the following line for a subclip of the first 5 seconds\n",
+    "    ##clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\").subclip(0,5)\n",
+    "    clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\")\n",
+    "    white_clip = clip1.fl_image(process_image) #NOTE: this function expects color images!!\n",
+    "    %time white_clip.write_videofile(white_output, audio=False)\n",
     "\n",
-    "#HTML(\"\"\"\n",
-    "#<video width=\"960\" height=\"540\" controls>\n",
-    "#  <source src=\"{0}\">\n",
-    "#</video>\n",
-    "#\"\"\".format(white_output))\n",
+    "    HTML(\"\"\"\n",
+    "    <video width=\"960\" height=\"540\" controls>\n",
+    "      <source src=\"{0}\">\n",
+    "    </video>\n",
+    "    \"\"\".format(white_output))\n",
     "\n",
-    "#yellow_output = 'test_videos_output/solidYellowLeft.mp4'\n",
-    "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
-    "## To do so add .subclip(start_second,end_second) to the end of the line below\n",
-    "## Where start_second and end_second are integer values representing the start and end of the subclip\n",
-    "## You may also uncomment the following line for a subclip of the first 5 seconds\n",
-    "##clip2 = VideoFileClip('test_videos/solidYellowLeft.mp4').subclip(0,5)\n",
-    "#clip2 = VideoFileClip('test_videos/solidYellowLeft.mp4')\n",
-    "#yellow_clip = clip2.fl_image(process_image)\n",
-    "#%time yellow_clip.write_videofile(yellow_output, audio=False)\n",
+    "    yellow_output = 'test_videos_output/solidYellowLeft.mp4'\n",
+    "    ## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
+    "    ## To do so add .subclip(start_second,end_second) to the end of the line below\n",
+    "    ## Where start_second and end_second are integer values representing the start and end of the subclip\n",
+    "    ## You may also uncomment the following line for a subclip of the first 5 seconds\n",
+    "    ##clip2 = VideoFileClip('test_videos/solidYellowLeft.mp4').subclip(0,5)\n",
+    "    clip2 = VideoFileClip('test_videos/solidYellowLeft.mp4')\n",
+    "    yellow_clip = clip2.fl_image(process_image)\n",
+    "    %time yellow_clip.write_videofile(yellow_output, audio=False)\n",
     "\n",
-    "#HTML(\"\"\"\n",
-    "#<video width=\"960\" height=\"540\" controls>\n",
-    "#  <source src=\"{0}\">\n",
-    "#</video>\n",
-    "#\"\"\".format(yellow_output))\n",
+    "    HTML(\"\"\"\n",
+    "    <video width=\"960\" height=\"540\" controls>\n",
+    "      <source src=\"{0}\">\n",
+    "    </video>\n",
+    "    \"\"\".format(yellow_output))\n",
     "\n",
-    "# Create a \"color\" binary image to combine with line image\n",
-    "#color_edges = np.dstack((edges, edges, edges))\n",
+    "    # Create a \"color\" binary image to combine with line image\n",
+    "    #color_edges = np.dstack((edges, edges, edges))\n",
     "\n",
-    "#ines_edges = weighted_img(line_img, color_edges)\n",
+    "    #ines_edges = weighted_img(line_img, color_edges)\n",
     "\n",
     "\n",
-    "#plt.imshow(lines_edges)\n",
+    "    #plt.imshow(lines_edges)\n",
     "\n",
-    "#os.listdir(\"test_images/\")"
+    "    #os.listdir(\"test_images/\")"
    ]
   }
  ],
